<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SportsCaster</string>
    <string name="detailView_name">Story Details</string>
    <string name="user_name">Welcome, User!</string>
    <string name="mainActivity_storiesLabel">Top Sports Stories:</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="default_warning">Default warning</string>
	<string name="title_text">Title (Black text)</string>
	<string name="date_text">Date (Gray text)</string>
	<string name="description_text">Description (White text)</string>
	<string name="reloadBtn_text">Reload</string>
	<string name="icon_text">Icon to represent a sport</string>
	<string name="detail_title">Selected title</string>
	<string name="detail_contentDesc">Image depicting related story</string>
	<string name="detail_dateLabel">Posted on: </string>
	<string name="detail_actualDate">dynamic date</string>
	<string name="detail_description">dynamic description</string>
	<string name="detail_webButton">View on ESPN</string>
	<string name="ratingAlert_title">Dynamic Title</string>
	<string name="ratingAlert_mainLabel">Rating was: </string>
	<string name="detail_shareLabel">Like this story?</string>
	<string name="detail_shareBtnLabel">Share it!</string>
	<string name="menu_search">Search</string>
	<string name="menu_preferences">Preferences</string>
	<string name="menu_favorites">Favorites</string>
	<string name="menu_info">Info</string>
	<string name="search_title">Search stories by title</string>
	<string name="search_inputHint">story title to search</string>
	<string name="search_buttonLabel">Find it!</string>
	<string name="search_cancel">Cancel</string>
	<string name="footer_intLabel">Int</string>
	<string name="footer_regularLabel">result(s) found for:</string>
	<string name="footer_searchLabel">searched string</string>
	<string name="footer_resetBtn">Clear filter</string>
	<string name="preferences_title">Welcome!</string>
	<string name="perferences_subHeading">It looks like this is the first time you\'ve used SportsCaster.  Tell us a bit about yourself!</string>
	<string name="preferences_nameField">your name</string>
	<string name="preferences_sportsField">your favorite sport</string>
	<string name="preferences_saveBtn">Save it!</string>
	<string name="preferences_detailDisclosure">You can always change these again later from within "Preferences"</string>
	<string name="favorites_title">User\'s Favorites:</string>
	<string name="favorites_warning">Depending on how long ago the stories were saved, links and images may no longer work.</string>
	<string name="favorites_noStories">Uh-oh.  Looks like you haven\'t saved any favorites yet.  Go back and find some!</string>
	<string name="favorites_activityLabel">Favorites</string>
	<string name="contextual_addItem">Add story to Favorites!</string>
	<string name="contextual_goTo">Go to Favorites</string>
	<string name="info_title">About SportsCaster</string>
	<string name="info_subheading1">Written by:                   Matthew Lewis</string>
	<string name="info_subheading2">Designed by:                  Matthew Lewis</string>
	<string name="info_subheading3">Cursed at by:                 Matthew Lewis</string>
	<string name="info_subheading4">Finally accepted by:          Matthew Lewis</string>
	<string name="info_subheading5">All data displayed in SportsCaster is provided by ESPN.  All characters appearing in this work are real. Any resemblance to real persons, living or dead, is 100% purposeful.</string>
	<string name="info_closeBtn">Close</string>
	<string name="info_activityTitle">Info</string>
	<string name="ratingIcon_contentDesc">rating saved for story</string>
</resources>
