<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
	<item
	    android:id="@id/menu_search"
	    android:icon="@drawable/ic_action_search"
	    android:showAsAction="ifRoom"
	    android:title="@string/menu_search"/>
	<item
	    android:id="@id/menu_favorites"
	    android:icon="@drawable/ic_action_important"
	    android:showAsAction="ifRoom"
	    android:title="@string/menu_favorites">
		<menu android:id="@id/contextual_menuHolder">
		    <item
		        android:id="@id/contextual_addFav"
		        android:title="@string/contextual_addItem" />
		    <item
		        android:id="@id/contextual_goToFav"
		        android:title="@string/contextual_goTo" />	    
	    </menu>
	</item>
	<item
	    android:id="@id/menu_info"
	    android:icon="@drawable/ic_action_about"
	    android:showAsAction="ifRoom"
	    android:title="@string/menu_info"/>
	<item
	    android:id="@id/menu_preferences"
	    android:showAsAction="never"
	    android:title="@string/menu_preferences"/>
</menu>
