<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@id/preferences_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/preferences_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@id/preferences_subHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/perferences_subHeading"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@id/preferences_nameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/preferences_nameField"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@id/preferences_sportField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/preferences_sportsField" />

    <Button
        android:id="@id/preferences_saveBtn"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minWidth="140dp"
        android:text="@string/preferences_saveBtn" />

    <TextView
        android:id="@id/preferences_detailDisclosure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#676767"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:text="@string/preferences_detailDisclosure"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>
