<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B63FF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
	    <TextView
	        android:id="@id/footer_intLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/footer_intLabel"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@id/footer_regularLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:text="@string/footer_regularLabel" />
	
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@id/footer_searchLabel"
            android:layout_width="0dip"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/footer_searchLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@id/footer_resetBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/footer_resetBtn" />

    </LinearLayout>

</LinearLayout>