<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/turf"
    android:orientation="vertical"
    tools:context="com.matthewlewis.sportscaster.MainActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@id/internet_warning"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.76"
            android:gravity="center"
            android:text="@string/default_warning"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@id/reload_btn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="97dp"
            android:layout_height="31dp"
            android:background="@android:drawable/btn_default_small"
            android:text="@string/reloadBtn_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@id/user_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/user_name" />
        
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textColor="#FFFFFF"
	        android:textStyle="bold"
	        android:text="@string/mainActivity_storiesLabel"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    
    	
	</LinearLayout>
	
	<ListView
	        android:id="@id/list"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_marginTop="20dp"
	        android:divider="#235887" >

    	</ListView>	 
    	   
</LinearLayout>
